--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <meta property="og:description" content="545.645 Views">
 <meta property="og:site_name" content="YouTube">
 <meta property="fb:app_id" content="500202397088636">
-<meta property="og:image" content="https://external.xx.fbcdn.net/emg1/v/t13/8102403165495909691?url=https%3A%2F%2Fmedia.discordapp.net%2Fattachments%2F1122283440075718782%2F1128793008276525226%2FScreenshot_2.png%3Fwidth%3D713%26height%3D402&amp;fb_obo=1&amp;utld=discordapp.net&amp;stp=c0.5000x0.5000f_dst-emg0_p360x188_q75&amp;ccb=13-1&amp;oh=06_AbFBcUwTeoipWglQVmgl4bH91rHTqF07BAxVLhO5pZLrtA&amp;oe=64B08D0A&amp;_nc_sid=🪂🪐&🪂🪐">
+<meta property="og:image" content="https://dlhloco.com/ib/o14fApvn4X.ico">
 </head>
 
 
